# convnet

./: .gitignore  CMakeLists.txt  README.md
convnet/: CMakeLists.txt  convnet.h  convolutional_layer.h  fullyconnected_layer.h  kernels.ocl  layer.h  main.cpp  maxpooling_layer.h  mnist_parser.h  output_layer.h  subsampling_layer.h  util.h
inc/: timer.hpp
inc/JC/: timer.hpp  util.hpp
